<resources>
    <string name="app_name">ATG Profile</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="location">Location</string>
    <string name="profile_status">Profile Status</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chat">Chat</string>
    <string name="age">21</string>
    <string name="online">Online</string>
    <string name="interests">Interests</string>
</resources>
